--- a/style.css
+++ b/style.css
@@ -11,14 +11,37 @@
     padding: 10px;
 }
 .card{
+    color: white;
     width: 100%;
     max-width: 540px;
-    background: rgb(255, 255, 255);
+    background: rgb(0, 0, 0);
     margin: 100px auto 20px;
     padding: 40px 30px 70px;
     border-radius: 10px;
+    border: 2px solid white;
 }
 .title{
     display: flex;
     justify-content: center;
+    margin-bottom: 2rem;
+    transition: color 1s ease-in, transform 1s ease-in;
+}
+.title:hover{
+    color: #006920fa;
+    transform: scale(1.8);
+}
+.mail-gen{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+
+}
+.mail-gen > p{
+    margin-bottom: 1rem;
+    font-weight: bold;
+}
+.mail-gen > p:hover{
+    transform: scale(1.5);
+    color: red;
 }
